--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.1",
     "cookie-parser": "~1.4.4",
+    "dateformat": "^3.0.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
