--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -26,8 +26,12 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
+    "nodemon": "^2.0.4"
   },
   "_moduleAliases": {
     "@src": "./src",
