--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -16,13 +16,16 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.11",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "sharp": "^0.25.2",
     "slugify": "^1.4.0",
+    "socket.io": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
